<resources>
    <string name="app_name">ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="already_have_on_account">Already have on account?</string>
    <string name="image_facebook">Image Facebook</string>
    <string name="categories_images">Categories Images</string>
    <string name="todo">TODO</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="each">Each</string>
</resources>