<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/StyledTilEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_low"
        android:hint="@string/user_name"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Button.Contained"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_low"
        android:text="@string/log_in"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        style="@style/Button.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:text="@string/registration"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        style="@style/Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/log_in" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:src="@drawable/ic_facebook"
        app:elevation="0dp" />

    <ImageButton
        style="@style/ImageButton.Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:background="@color/primaryColor"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_favorite_border"
        app:tintMode="src_atop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_remove"
            style="@style/Widget.App.FloatingActionButtonSquareCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:stateListAnimator="@null"
            app:collapsedSize="40dp"
            app:elevation="0dp"
            app:icon="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="0.5dp" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/square_border"
            android:gravity="center"
            android:text="3"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintStart_toEndOf="@+id/btn_remove"
            app:layout_constraintTop_toTopOf="@id/btn_remove"
            app:layout_constraintWidth_percent="0.39" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_add"
            style="@style/Widget.App.FloatingActionButtonSquareCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:stateListAnimator="@null"
            app:collapsedSize="40dp"
            app:elevation="0dp"
            app:icon="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_quantity"
            app:layout_constraintTop_toTopOf="@id/btn_remove"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="0.5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/cancel_item"
        style="@style/Widget.App.FloatingActionButtonSquareRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:stateListAnimator="@null"
        app:backgroundTint="@color/secondaryVariantColor"
        app:borderWidth="0dp"
        app:collapsedSize="40dp"
        app:elevation="0dp"
        app:icon="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="@id/cart_item_value" />


</LinearLayout>